fix on not fitting images in conversations list

--- a/src/ui/css/yakyak/convlist.less
+++ b/src/ui/css/yakyak/convlist.less
@@ -132,6 +132,7 @@
                 width: calc(~"100% - 60px");
             }
             img, .initials {
+                object-fit: cover;
                 border-radius: 50%;
                 position: absolute;
                 width: 50px;
